--- a/docs/_includes/navbar.html
+++ b/docs/_includes/navbar.html
@@ -1,14 +1,14 @@
 <nav>
   <ul class="navigation">
     <li class="nav-title">
-      <a class="nav-title-a" href="./index.html">
+      <a class="nav-title-a" href="/index">
         <img class="icon" src="/images/icon.svg" alt="" style="filter: invert(100%);">
         <span>Super Laser Cat</span>
       </a>
     </li>
-    <li><a href="./issues.html">Bug Reports</a></li>
-    <li><a href="./releases.html">Releases</a></li>
-    <li><a href="./devblog.html">Dev Blog</a></li>
-    <li><a href="./news.html">News</a></li>
+    <li><a href="/issues">Bug Reports</a></li>
+    <li><a href="/releases">Releases</a></li>
+    <li><a href="/devblog">Dev Blog</a></li>
+    <li><a href="/news">News</a></li>
   </ul>
 </nav>
