Fix favicon path

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -1,6 +1,6 @@
 <head>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="images/icon.svg">
+  <link href="/images/icon.svg" rel="shortcut icon">
   <link href="/css/navbar.css" rel="stylesheet" type="text/css">
   <link href="/css/main.css" rel="stylesheet" type="text/css">
   <link href="/css/footer.css" rel="stylesheet" type="text/css">
