I frankly have no idea what I'm doing.

--- a/docs/_includes/navbar.html
+++ b/docs/_includes/navbar.html
@@ -2,7 +2,7 @@
   <ul class="navigation">
     <li class="nav-title">
       <a class="nav-title-a" href="/index">
-        <img class="icon" src="/images/icon.svg" alt="" style="filter: invert(100%);">
+        <img class="icon" src="{{ relative_url }}/images/icon.svg" alt="" style="filter: invert(100%);">
         <span>Super Laser Cat</span>
       </a>
     </li>
