Just ignore me for a bit.

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -1,9 +1,9 @@
 <head>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="{{ relative_url }}/images/icon.svg" rel="shortcut icon">
-  <link href="{{ relative_url }}/css/navbar.css" rel="stylesheet" type="text/css">
-  <link href="{{ relative_url }}/css/main.css" rel="stylesheet" type="text/css">
-  <link href="{{ relative_url }}/css/footer.css" rel="stylesheet" type="text/css">
+  <link href="{{ site.baseurl }}/images/icon.svg" rel="shortcut icon">
+  <link href="{{ site.baseurl }}/css/navbar.css" rel="stylesheet" type="text/css">
+  <link href="{{ site.baseurl }}/css/main.css" rel="stylesheet" type="text/css">
+  <link href="{{ site.baseurl }}/css/footer.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Audiowide|Comfortaa&display=swap" rel="stylesheet">
   <title>{{page.title}} • {{ site.title }}</title>
 </head>
