--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -7,7 +7,7 @@
     {% include navbar.html %}
 
     <div class="content">
-      <h1 class="title">Super Laser Cat</h1>
+      <h1 class="title">{{ page.title }}</h1>
       {{ content }}
     </div>
 
