--- a/docs/_includes/navbar.html
+++ b/docs/_includes/navbar.html
@@ -1,7 +1,7 @@
 <nav>
   <ul class="navigation">
     <li class="nav-title">
-      <a class="nav-title-a" href="{{ '/index' | relative_url }}">
+      <a class="nav-title-a" href="{{ '/' | relative_url }}">
         <img class="icon" src="{{ '/images/icon.svg' | relative_url }}" alt="" style="filter: invert(100%);">
         <span>Super Laser Cat</span>
       </a>
