--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer>
-  <span>&copy; 2019 {{ site.author }}</span>
+  <span>&copy; 2019 <a href="{{ site.author_url }}">{{ site.author }}</a></span>
 </footer>
