--- a/docs/css/footer.css
+++ b/docs/css/footer.css
@@ -13,3 +13,12 @@ footer span {
   text-align: center;
   text-shadow: 2px 2px 3px #282828;
 }
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
