Begin grid style, general improvements, placeholder posts

--- a/docs/_includes/navbar.html
+++ b/docs/_includes/navbar.html
@@ -1,12 +1,12 @@
 <nav>
-  <ul class="navigation">
+  <ul>
     <li class="nav-title">
       <a class="nav-title-a" href="{{ '/' | relative_url }}">
-        <img class="icon" src="{{ '/images/icon.svg' | relative_url }}" alt="" style="filter: invert(100%);">
+        <img class="icon" src="{{ '/assets/images/icon.svg' | relative_url }}" alt="" style="filter: invert(100%);">
         <span>Super Laser Cat</span>
       </a>
     </li>
-    <li><a href="{{ '/issues' | relative_url }}">Bug Reports</a></li>
+    <li><a href="{{ '/issues' | relative_url }}">Issues</a></li>
     <li><a href="{{ '/releases' | relative_url }}">Releases</a></li>
     <li><a href="{{ '/devblog' | relative_url }}">Dev Blog</a></li>
     <li><a href="{{ '/news' | relative_url }}">News</a></li>
