--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -1,9 +1,10 @@
 <head>
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="{{ '/images/icon.svg' | relative_url }}" rel="shortcut icon">
-  <link href="{{ '/css/navbar.css' | relative_url }}" rel="stylesheet" type="text/css">
-  <link href="{{ '/css/main.css' | relative_url }}" rel="stylesheet" type="text/css">
-  <link href="{{ '/css/footer.css' | relative_url }}" rel="stylesheet" type="text/css">
+  <script src="{{ '/assets/js/jquery-3.4.1.min.js' | relative_url }}" charset="utf-8"></script>
+  <link href="{{ '/assets/images/icon.svg' | relative_url }}" rel="shortcut icon">
+  <link href="{{ '/assets/css/navbar.css' | relative_url }}" rel="stylesheet" type="text/css">
+  <link href="{{ '/assets/css/main.css' | relative_url }}" rel="stylesheet" type="text/css">
+  <link href="{{ '/assets/css/footer.css' | relative_url }}" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Audiowide|Comfortaa&display=swap" rel="stylesheet">
   <title>
     {% if page.title_override %}
